bars load in callout on box hover and all are aligned correctly

--- a/style.css
+++ b/style.css
@@ -94,3 +94,7 @@ div.callout {
 
 	/*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
 }
+
+/*.callout.row{
+  padding: 0 !important;
+}*/
